--- a/Informes/Oficial_PG1_Informe.Rmd
+++ b/Informes/Oficial_PG1_Informe.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Estudio sobre la relación del lenguaje de programación que usan los desarrolladores en su trabajo y su salud mental"
+title: "Estudio sobre la relación entre las tecnologías que usan los desarrolladores en su trabajo y su salud mental"
 author: "Grupo 7"
 output: 
   html_document:
@@ -13,7 +13,7 @@ output:
 
 Hablar del mundo de la programación es adentrarse en un universo inmenso, lleno de posibilidades y retos. Sin embargo, si nuestro objetivo es adentrarnos en este mundo, debemos tomar en cuenta nuestra salud por encima de todo.
 
-\### Relevancia e importancia
+### Relevancia e importancia
 
 Actualmente se ve una preferencia enorme por las empresas en usar las nuevas tecnologías, por lo que si queremos enfocarnos en este rubro será de mucha utilidad saber cómo es que influye el lenguaje de programación que usan con la calidad de vida que tienen los desarrolladores.
 
@@ -74,7 +74,7 @@ Informe prolijo:first_16, after first_15, 2d
 
 ### Objetivo principal
 
-Demostrar que la salud mental del programador depende, en parte, del lenguaje de programación que escojas para trabajar.
+Demostrar que la salud mental del programador depende, en parte, del lenguaje de programación que escoja para trabajar.
 
 ### Objetivos secundarios
 
@@ -112,7 +112,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                        | Restricciones                   |
-|-----------------------|--------------------|--------------------------------------------------------------------|---------------------------------|
+|------------------|------------------|--------------------|------------------|
 | MainBranch            | Categórica nominal | Contiene información sobre el estado profesional del desarrollador | \-                              |
 | Employment            | Categórica nominal | El tipo de empleo que tiene le desarrollador                       | separado por punto y coma       |
 | RemoteWork            | Categórica nominal | De que forma ejercen el trabajo remoto                             | \-                              |
@@ -133,7 +133,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
-|-----------------------|--------------------|-------------------------------------------------------------------|---------------------------------|
+|------------------|------------------|--------------------|------------------|
 | Title                 | Categórica Nominal | Nombre original del lenguaje de programación                      | \-                              |
 | Appeared              | Numérica discreta  | Año en donde apareció por primera vez el lenguaje de programación | \>= 1945                        |
 | Rank                  | Numérica discreta  | Un ranking hecho por PLDB                                         | \>=0                            |
@@ -148,10 +148,18 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 
 ### Carga de librerías
 
+```{r warning=FALSE}
+library(readr)
+library(dplyr)
+library(readr)
+library(ggplot2)
+library(tidyverse)
+library(stringr)
+```
+
 ### Carga de datos
 
 ```{r warning=FALSE, include=FALSE}
-library(readr)
 
 languages = read_csv("https://pldb.com/pldb.csv")
 encuesta = read_csv("../db/upload_survey_results.csv")
@@ -161,18 +169,786 @@ encuesta = read_csv("../db/upload_survey_results.csv")
 
 ### Encuestas de Stackoverflow
 
+-   Encuestas de Stack Overflow (33880 registros obtenidos de 73268)
+
+```{r warning=FALSE, echo=FALSE}
+#Leer la base de datos
+encuesta = read_csv("../db/upload_survey_results.csv")
+
+```
+
+#### Revisar que la base de datos esté limpia:
+
+Revisaremos cuantos casos completos hay
+
+```{r}
+#complete cases
+table(complete.cases(encuesta))
+```
+
+Observamos que parece que ninguna observación esta completa. HORROR! Sin embargo mejor enfoquémonos en las variables que queremos analizar y revisemos de nuevo.
+
+```{r}
+#borrar las filas que no queremos
+encuesta = select(encuesta, MainBranch, Employment, RemoteWork, CodingActivities, DevType, Country, EdLevel, Currency, ConvertedCompYearly, MentalHealth, Ethnicity, Gender, Age, `OpSysPersonal use`, `OpSysProfessional use`, LanguageHaveWorkedWith)
+
+```
+
+Ahora si, revisemos de nuevo cuantos casos completos tenemos.
+
+```{r}
+#casos completos
+table(complete.cases(encuesta))
+```
+
+Tal parece que solo 34672 casos están completos, por lo que seleccionaremos justo estos.
+
+```{r}
+#eliminar nulos
+encuesta = na.omit(encuesta)
+```
+
+#### Revisar valores de las columnas
+
+Para esta primera instancia analizaremos primero las variables numéricas, de esta forma podemos eliminar lo que creemos que se aleja de la realidad, como salarios extremadamente bajos que solo entorpecen el análisis.
+
+```{r}
+#minimo unos 3600 dolares anuales
+encuesta = encuesta[encuesta$ConvertedCompYearly > 3600,]
+```
+
+Filtrar por los géneros. En la encuesta se permite elegir géneros de varios tipos. Sin embargo, para fines de estudio nos limitaremos a hombre o mujeres, más obviaremos a los no binarios, entre otros.
+
+```{r}
+encuesta = encuesta[encuesta$Gender == "Man" | encuesta$Gender == "Woman",]
+
+table(encuesta$Gender)
+```
+
+Con respecto a las edades, eliminaremos a los que no prefirieron responder.
+
+```{r}
+encuesta = encuesta[encuesta$Age != "Prefer not to say",]
+```
+
+Con respecto a la parte de la encuesta donde se definen los estados de salud mental, eliminaremos las que son escritas ya que son muy dificiles de analizar y no representan una gran parte de la muestra.
+
+```{r}
+#si tiene la palabra: "in your own words" eliminarla,
+#ya que no es una respuesta válida
+encuesta = encuesta[!str_detect(encuesta$MentalHealth, "in your own words"),]
+
+#si tiene la palabra: "Prefer not to say" eliminarla,
+#ya que no es una respuesta válida
+
+encuesta = encuesta[!str_detect(encuesta$MentalHealth, "Prefer not to say"),]
+
+
+```
+
+Listo, eso es todo lo que querremos filtrar en la base de datos.
+
+#### Crear columnas para lenguajes de programación
+
+Ahora crearemos columnas para cada lenguaje de programación, esto con el fin de poder hacer un análisis más sencillo.
+
+```{r}
+# Separar los lenguajes y crear columnas separadas
+language <- encuesta %>%
+  separate_rows(LanguageHaveWorkedWith, sep = ";") %>%
+  group_by(LanguageHaveWorkedWith) %>%
+  summarize() %>%
+  pull()
+
+for (name in language) {
+  encuesta[name] = FALSE
+}
+
+for (i in 1:nrow(encuesta)) {
+  for (elem in unlist(strsplit(encuesta$LanguageHaveWorkedWith[i],";"))){
+    encuesta[i, elem] <- TRUE
+  }
+}
+
+
+
+```
+
+#### Crear columnas para los problemas mentales
+
+Ahora crearemos columnas para cada problema mental, esto con el fin de poder hacer un análisis más sencillo.
+
+```{r}
+
+# op1
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "concentration", "\\b"))
+encuesta$Memoria <- columna_booleana
+
+# op2
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "mood", "\\b"))
+encuesta$Emotional <- columna_booleana
+
+# op3
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "anxiety", "\\b"))
+encuesta$Anxiety <- columna_booleana
+
+# op4
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "autism", "\\b"))
+encuesta$Autism <- columna_booleana
+
+# op5
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "learning", "\\b"))
+encuesta$Learning <- columna_booleana
+```
+
+#### Crear columnas para sistemas operativos
+
+```{r}
+encuesta$BSD <- logical(nrow(encuesta))
+encuesta$Linux_Based <- logical(nrow(encuesta))
+encuesta$Windows <- logical(nrow(encuesta))
+encuesta$Windows_for_Linux <- logical(nrow(encuesta))
+encuesta$Mac <- logical(nrow(encuesta))
+
+opciones_a_verificar <- c("BSD", "Linux-based", "Windows", "Windows Subsystem for Linux (WSL)",
+                         "macOS")
+
+# op1
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "BSD", "\\b"))
+encuesta$BSD <- columna_booleana
+
+# op2
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "based", "\\b"))
+encuesta$Linux_Based <- columna_booleana
+
+# op3
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "Windows", "\\b"))
+encuesta$Windows <- columna_booleana
+
+# op4
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "Subsystem", "\\b"))
+encuesta$Windows_for_Linux <- columna_booleana
+
+# op5
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "macOS", "\\b"))
+encuesta$Mac <- columna_booleana
+```
+
 ### PLDB Lenguajes de Programación
+
+Se procederá a limpiar la base de datos `Programming_languages.csv`.
+
+Veamos cuántas filas y columnas tiene nuestro `languages`:
+
+```{r}
+nrow(languages)
+ncol(languages)
+```
+
+Como se puede ver, hay muchas columnas (en total 356); sin embargo no utilizaremos todas para este estudio.
+
+Por ello, procedemos a limpiar nuestro `languages`, centrándonos en las variables que nos interesan, las cuales son: `Title`, `Appeared`, `Type`, `Rank`, `numberOfJobs`, `numberOfUsers`, `Country`, `githubLanguage.repos` y `githubBigQuery.repos`.
+
+Vamos a eliminar las columnas que no necesitemos:
+
+```{r}
+# Columnas a conservar
+languages <- select(languages, title, appeared, type, rank, numberOfJobsEstimate, numberOfUsersEstimate, country, githubLanguage_repos, githubBigQuery_repos)
+```
+
+El resultado de este proceso sería:
+
+```{r}
+names(languages)
+```
+
+Renombraremos las variables para una mejor manipulación
+
+```{r}
+languages %>% rename(Nombre = title,
+                     Año = appeared,
+                     Tipo = type,
+                     Rank = rank,
+                     N_Trabajos = numberOfJobsEstimate,
+                     N_Usuarios = numberOfUsersEstimate,
+                     País = country,
+                     Github_repos = githubLanguage_repos,
+                     BigQuery_repos = githubBigQuery_repos) -> languages
+```
+
+Limpieza de datos
+
+#### Nombre
+
+La variable `Nombre` ya se encuentra limpia, verifiquemos que esté completa para todas las filas:
+
+```{r}
+any(is.na(languages$Nombre))
+```
+
+Efectivamente está completa.
+
+#### Año
+
+Consideraremos los lenguajes de programación que hayan sido creados posteriores e iguales al año 1945:
+
+```{r}
+languages$Año[languages$Año < 1945] <- NA
+
+#languages <- languages[!is.na(languages$Año), ]
+```
+
+#### Tipo
+
+Queremos que la variable `Tipo` corresponda a lenguajes de programación `pl` o `queryLanguage`, Por lo que se eliminan todos los registros que no sean `pl` (programming languages) o `queryLanguage` (Lenguaje de consulta)
+
+```{r}
+languages <- languages[languages$Tipo == "pl" | languages$Tipo == "queryLanguage" | languages$Tipo == "textMarkup" | languages$Tipo == "stylesheetLanguage" ,]
+```
+
+#### Rank
+
+Como el ranking de esta variable empieza en 0, vamos a sumar 1 a cada fila de esta variable:
+
+```{r}
+languages$Rank <- languages$Rank + 1
+```
+
+#### N_Trabajos
+
+Queremos que el lenguaje de programación tenga al menos 1 trabajador:
+
+```{r}
+languages$N_Trabajos[languages$N_Trabajos == 0] <- NA
+```
+
+#### N_Usuarios
+
+Queremos que el lenguaje de programación tenga más de 10 usuarios:
+
+```{r}
+languages <- languages[languages$N_Usuarios > 10,] 
+```
+
+#### País
+
+Esta variable ya está limpia.
+
+#### Github_repos
+
+Queremos que exista al menos un repositorio al buscar en Github
+
+```{r}
+languages$Github_repos[languages$Github_repos == 0] <- NA
+```
+
+#### BigQuery_repos
+
+Queremos que exista al menos un repositorio al buscar en BigQuery
+
+```{r}
+languages$BigQuery_repos[languages$BigQuery_repos == 0] <- NA
+```
+
+Usaremos algunos lenguajes de programación, para que coincida con los usados por los usuarios de Stackoverflow
+
+```{r}
+language <- c('APL', 'Assembly', 'Bash', 'C', 'C#', 'C++', 'Clojure', 'COBOL', 'Crystal', 'Dart', 'Delphi', 'Elixir', 'Erlang', 'F#', 'Fortran', 'Go', 'Groovy', 'Haskell', 'HTML','CSS', 'Java', 'JavaScript', 'Julia', 'Kotlin', 'LISP', 'Lua', 'MATLAB', 'OCaml', 'Objective-C', 'Perl', 'PHP', 'PowerShell', 'Python', 'R', 'Ruby', 'Rust', 'SAS', 'Scala', 'Solidity', 'SQL', 'Swift', 'TypeScript', 'VBA')
+```
+
+```{r}
+df <- data.frame()
+
+agregar_fila <- function(fila) {
+  df <- rbind(df, fila)
+}
+
+for (i in 1:nrow(languages)){
+  if (languages$Nombre[i] %in% language){
+    fila <- subset(languages, Nombre == languages$Nombre[i])
+    df <- rbind(df, fila)
+  }
+}
+
+languages <- df
+rm(df)
+rm(fila)
+```
 
 ## Variables de estudio Finales
 
 ## Preguntas e Hipótesis
 
+#### Pregunta 1:
+
+-   ¿Existe una relación entre el lenguaje de programación utilizado por un desarrollador y su salud mental?
+
+Hipótesis:
+
+-   La elección del lenguaje de programación utilizado por un desarrollador influye en su salud mental. Se espera que algunos lenguajes de programación estén asociados con niveles más altos de estrés o frustración, mientras que otros puedan promover una mayor satisfacción y bienestar.
+
+#### Pregunta 2:
+
+-   ¿Hay alguna relación entre la popularidad de un lenguaje de programación y la satisfacción laboral de los programadores que lo utilizan?
+
+Hipótesis:
+
+-   No existe una correlación significativa entre la popularidad de un lenguaje de programación y la satisfacción laboral de los programadores. Se espera que la satisfacción laboral esté influenciada por otros factores, como la dificultad del lenguaje, el acceso a información que este brinda, entre otros.
+
+#### Pregunta 3:
+
+-   ¿Existe una relación entre el acceso a información relevante sobre un lenguaje de programación y la salud mental de los programadores que lo utilizan?
+
+Hipótesis:
+
+-   El acceso a información adecuada sobre un lenguaje de programación está relacionado con una mejor salud mental de los programadores. Se espera que los desarrolladores que tienen un fácil acceso a recursos de aprendizaje y documentación de su lenguaje de programación experimenten mejores estados mentales.
+
+#### Pregunta 4:
+
+-   ¿Hay una relación entre el salario asociado a un lenguaje de programación y la salud mental de los programadores que lo utilizan?
+
+Hipótesis:
+
+-   El salario ofrecido por un lenguaje de programación no tiene una influencia directa en la salud mental de los programadores. Se espera que otros factores, como el ambiente laboral, tengan un impacto más significativo en la salud mental de los desarrolladores que el salario.
+
+#### Pregunta 5:
+
+-   ¿Existe una relación entre el sistema operativo utilizado en el trabajo y la salud mental de los individuos?
+
+Hipótesis:
+
+-   Se espera que sistema operativo utilizado en el ámbito profesional se relacione de forma debil con la salud mental de los individuos.
+
 ## Análisis Descriptivo
 
-### Análisis univariado
+### ¿Existe una relación entre el lenguaje de programación utilizado por un desarrollador y su salud mental?
 
-### Análisis bivariado
+Para responder a esta pregunta utilizaremos los siguientes gráficos:
 
-### Análisis multivariado
+#### Salud mental vs. Tecnologías de desarrollo
+
+Vamos a crear un gráfico de barras por cada problema mental identificado. En el cuál pondremos una barra por cada lenguaje de programación
+
+Recordemos que nuestros datos principales se llaman "encuesta"
+
+> ##### Variables necesarias:
+
+```{r}
+#seleccionar todos los registros con Memoria = True
+
+memoria <- filter(encuesta, Memoria == TRUE)
+ansiedad <- filter(encuesta, Anxiety == TRUE)
+emocional <- filter(encuesta, Emotional == TRUE)
+autismo <- filter(encuesta, Autism == TRUE)
+aprendizaje <- filter(encuesta, Learning == TRUE)
+
+
+language <- encuesta %>%
+  separate_rows(LanguageHaveWorkedWith, sep = ";") %>%
+  group_by(LanguageHaveWorkedWith) %>%
+  summarize() %>%
+  pull()
+
+```
+
+#### Memoria:
+
+> ##### Tabla de frecuencias:
+
+```{r}
+
+porcentajes <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+	cantidad = nrow(memoria[memoria[[current]] == TRUE, ])
+	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
+	porcentajes[current] <- cantidad/cantidadTotal
+}
+
+
+#ordenar porcentajes de mayor a menor
+porcentajes <- sort(porcentajes, decreasing = TRUE)
+
+#mostrar tabla en formato de tabla
+porcentajes = data.frame(porcentajes)
+
+porcentajes
+```
+
+> ##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
+
+```{r}
+
+porcentajeshelper <- porcentajes$porcentajes[1:15]
+nombres <- rownames(porcentajes)[1:15]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Memoria", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.25),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+
+
+porcentajeshelper <- porcentajes$porcentajes[25:40]
+nombres <- rownames(porcentajes)[25:40]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Memoria", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.25),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+```
+
+#### Ansiedad
+
+> ##### Tabla de frecuencias:
+
+```{r}
+
+porcentajes <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+	cantidad = nrow(ansiedad[ansiedad[[current]] == TRUE, ])
+	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
+	porcentajes[current] <- cantidad/cantidadTotal
+}
+
+
+#ordenar porcentajes de mayor a menor
+porcentajes <- sort(porcentajes, decreasing = TRUE)
+
+#mostrar tabla en formato de tabla
+porcentajes = data.frame(porcentajes)
+
+porcentajes
+```
+
+> ##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
+
+```{r}
+
+porcentajeshelper <- porcentajes$porcentajes[1:15]
+nombres <- rownames(porcentajes)[1:15]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Ansiedad", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.16),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+
+
+porcentajeshelper <- porcentajes$porcentajes[25:40]
+nombres <- rownames(porcentajes)[25:40]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Ansiedad", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.16),
+
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+```
+
+#### Emocional:
+
+> ##### Tabla de frecuencias:
+
+```{r}
+
+porcentajes <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+	cantidad = nrow(emocional[emocional[[current]] == TRUE, ])
+	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
+	porcentajes[current] <- cantidad/cantidadTotal
+}
+
+
+#ordenar porcentajes de mayor a menor
+porcentajes <- sort(porcentajes, decreasing = TRUE)
+
+#mostrar tabla en formato de tabla
+porcentajes = data.frame(porcentajes)
+
+porcentajes
+```
+
+> ##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
+
+```{r}
+
+porcentajeshelper <- porcentajes$porcentajes[1:15]
+nombres <- rownames(porcentajes)[1:15]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Emocionales", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.15),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+
+
+
+porcentajeshelper <- porcentajes$porcentajes[25:40]
+nombres <- rownames(porcentajes)[25:40]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Emocionales", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.15),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+```
+
+#### Autismo
+
+> ##### Tabla de frecuencias:
+
+```{r}
+
+porcentajes <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+	cantidad = nrow(autismo[autismo[[current]] == TRUE, ])
+	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
+	porcentajes[current] <- cantidad/cantidadTotal
+}
+
+
+#ordenar porcentajes de mayor a menor
+porcentajes <- sort(porcentajes, decreasing = TRUE)
+
+#mostrar tabla en formato de tabla
+porcentajes = data.frame(porcentajes)
+
+porcentajes
+```
+
+> ##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
+
+```{r}
+
+porcentajeshelper <- porcentajes$porcentajes[1:15]
+nombres <- rownames(porcentajes)[1:15]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Autismo", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.1),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+
+
+
+porcentajeshelper <- porcentajes$porcentajes[25:40]
+nombres <- rownames(porcentajes)[25:40]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Autismo", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	xlim = c(0,0.1),
+
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+```
+
+#### Aprendizaje
+
+> ##### Tabla de frecuencias:
+
+```{r}
+
+porcentajes <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+	cantidad = nrow(aprendizaje[aprendizaje[[current]] == TRUE, ])
+	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
+	porcentajes[current] <- cantidad/cantidadTotal
+}
+
+
+#ordenar porcentajes de mayor a menor
+porcentajes <- sort(porcentajes, decreasing = TRUE)
+
+#mostrar tabla en formato de tabla
+porcentajes = data.frame(porcentajes)
+
+porcentajes
+```
+
+##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
+
+```{r}
+
+porcentajeshelper <- porcentajes$porcentajes[1:15]
+nombres <- rownames(porcentajes)[1:15]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Aprendizaje", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+
+	xlim = c(0,0.1),
+	
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+
+
+porcentajeshelper <- porcentajes$porcentajes[25:40]
+nombres <- rownames(porcentajes)[25:40]
+
+#plotear porcentajes en grafico de barras de lado
+
+barplot(porcentajeshelper, 
+	main="% Personas que sufren de problemas de Aprendizaje", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+
+  xlim = c(0,0.1),
+	
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+	
+
+	)
+
+```
+
+De estos gráficos podemos identificar distintos lenguajes que generan problemas a los desarrolladores.
+
+Tipos de problemas mentales:
+
+-   Aprendizaje
+
+    -   Entre las personas que sufren de problemas de aprendizaje, podemos identificar como principales a los siguientes lenguajes: **APL, SAS y LUA**.
+
+-   Autismo
+
+    -   Entre las personas que sufren problemas de autismo, podemos identificar como principales a los siguientes lenguajes: **Crystal, Lua, Julia y SAS.**
+
+-   Emocionales
+
+    -   Entre las personas que sufren problemas emocionales, podemos identificar como principales a **Erlang, Lua, SAS y Haskell.**
+
+-   Ansiedad
+
+    -   En cuanto a los problemas de ansiedad: **SAS, Lua y Ruby.**
+
+-   Memoria
+
+    -   Finalmente, en cuanto a las personas con problemas de memoria, podemos identificar a los siguientes lenguajes: **Erlang, Crystal y Lua.**
+
+Resulta evidente la repetición de ciertos lenguajes en todos los tipos de problemas mentales, de los cuales destacan **SAS, Erlang, Crystal y Lua.** Dichos lenguajes parecen ser los más problematicos. Mientras que los menos problemáticos parecen ser lenguajes como **Java, C++ o MATLAB**.
+
+Podemos pensar entonces que el lenguaje de programación si afecta de cierta forma al estado mental de una persona ya sea por su complejidad, falta de información u otros factores. La relación se hace presente puesto que podemos separar a lenguajes "**problemáticos" (que producen mayor cantidad de problemas mentales)** de lenguajes **"poco problemáticos" (que producen una cantidad baja de problemas mentales)**.
+
+Prontamente observaremos las causas por las que estos lenguajes son más "problemáticos".
 
 ### Conclusiones Parciales
